# sec-filing-analysis-demo

./: .env.example  .gitignore  README.md
demo/: behavior_agent.py  cli.py  config.py  evaluate.py  main.py  models.py  pyproject.toml  queries.json  react_agent.py  retriever.py  sec_loader.py  tui.py
demo/scripts/: ingest.py
